--- a/styles/index.css
+++ b/styles/index.css
@@ -2,6 +2,8 @@ body{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: "Lato",sans-serif;
+    background-color:  #4CAF50;
 }
 
 /*Header*/
@@ -10,6 +12,7 @@ header{
     display: flex;
     justify-content: center;
     padding: 0 50px;
+    background-color: #2E7D32;
 }
 .header-container{
     width: 100%;
@@ -17,9 +20,16 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+   
 }
 .header-logo{
     margin: 0;
+    font-family:"Montserrat", sans-serif;
+    color: #FFFF;
+}
+.header-img{
+    width: 30px;
+    height: 30px;
 }
 .header-list{
     display: flex;
@@ -33,7 +43,7 @@ header{
 }
 .header-link{
     text-decoration: none;
-    color: black;
+    color: #FFFF;
 }
 
 /*Header*/
@@ -41,8 +51,38 @@ header{
 
 
 
-
+/*Hero*/
 
 .hero-section{
     min-height: 90vh;
+    background-color:  #4CAF50;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
+.hero-text-container{
+    width: 100%;
+    max-width: 700px;
+    display: flex;
+    flex-direction: column;
+
+}
+.hero-header{
+    color: #FFFF;
+    margin: 0;
+}
+.hero-text{
+    color: #FFFF;
+    margin: 0;
+}
+.hero-image-container{
+    width: 100%;
+    max-width: 600px;
+    min-height: 400px;
+    display: flex;
+}
+.hero-img{
+    width: 100%;
+}
+
+/*Hero*/
